# AISearch-ImageAnalysisSkill

./: .env.sample  .gitignore  README.md  function_app.py  pyproject.toml  requirements.txt
src/aisearch/: azure_search_client.py  config.py  definitions.py  helpers.py  setup.py
src/function/: function_app.py  requirements.txt
src/test/function/: call_function.py
